exercise/12/istio-spec.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service0
  namespace: app-istio
spec:
  gateways:
    - service0
  hosts:
    - httpserver.liljackson.xyz
  http:
  - match:
      - port: 443
    route:
      - destination:
          host: service0.app-istio.svc.cluster.local
          port:
            number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service0
  namespace: app-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpserver.liljackson.xyz
      port:
        name: https-service0
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: wildcard-liljackson-xyz-tls
